feat: add pusher integration and implemments game engine service
