# app/src/Entity/Difficulty.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Entity;
+
+enum Difficulty: string
+{
+    case EASY = 'easy';
+    case MEDIUM = 'medium';
+    case HARD = 'hard';
+}
