# app/src/Entity/GameSession.php
@@ -1,0 +1,80 @@
+<?php
+
+namespace App\Entity;
+
+use App\Repository\GameSessionRepository;
+use Doctrine\ORM\Mapping as ORM;
+
+#[ORM\Entity(repositoryClass: GameSessionRepository::class)]
+class GameSession
+{
+    #[ORM\Id]
+    #[ORM\GeneratedValue]
+    #[ORM\Column]
+    private ?int $id = null;
+
+    #[ORM\Column(enumType: Status::class)]
+    private ?Status $status = null;
+
+    #[ORM\Column(nullable: true)]
+    private ?array $state = null;
+
+    #[ORM\Column]
+    private ?int $userId = null;
+
+    #[ORM\Column(enumType: Difficulty::class)]
+    private ?Difficulty $difficulty = null;
+
+    public function getId(): ?int
+    {
+        return $this->id;
+    }
+
+    public function getStatus(): ?Status
+    {
+        return $this->status;
+    }
+
+    public function setStatus(Status $status): static
+    {
+        $this->status = $status;
+
+        return $this;
+    }
+
+    public function getState(): ?array
+    {
+        return $this->state;
+    }
+
+    public function setState(?array $state): static
+    {
+        $this->state = $state;
+
+        return $this;
+    }
+
+    public function getUserId(): ?int
+    {
+        return $this->userId;
+    }
+
+    public function setUserId(int $userId): static
+    {
+        $this->userId = $userId;
+
+        return $this;
+    }
+
+    public function getDifficulty(): ?Difficulty
+    {
+        return $this->difficulty;
+    }
+
+    public function setDifficulty(Difficulty $difficulty): static
+    {
+        $this->difficulty = $difficulty;
+
+        return $this;
+    }
+}
