# app/src/Entity/GameSessionGuest.php
@@ -1,0 +1,97 @@
+<?php
+
+namespace App\Entity;
+
+use App\Repository\GameSessionGuestRepository;
+use Doctrine\ORM\Mapping as ORM;
+
+#[ORM\Entity(repositoryClass: GameSessionGuestRepository::class)]
+class GameSessionGuest
+{
+    #[ORM\Id]
+    #[ORM\GeneratedValue]
+    #[ORM\Column]
+    private ?int $id = null;
+
+    #[ORM\ManyToOne(targetEntity: GameSession::class)]
+    #[ORM\JoinColumn(nullable: false)]
+    private ?GameSession $gameSession = null;
+
+    #[ORM\ManyToOne(targetEntity: Guest::class)]
+    #[ORM\JoinColumn(nullable: false)]
+    private ?Guest $guest = null;
+
+    #[ORM\Column]
+    private int $score = 0;
+
+    #[ORM\Column]
+    private int $lives = 3;
+
+    #[ORM\Column]
+    private bool $isAlive = true;
+
+    public function getId(): ?int
+    {
+        return $this->id;
+    }
+
+    public function getGameSession(): ?GameSession
+    {
+        return $this->gameSession;
+    }
+
+    public function setGameSession(GameSession $gameSession): static
+    {
+        $this->gameSession = $gameSession;
+
+        return $this;
+    }
+
+    public function getGuest(): ?Guest
+    {
+        return $this->guest;
+    }
+
+    public function setGuest(Guest $guest): static
+    {
+        $this->guest = $guest;
+
+        return $this;
+    }
+
+    public function getScore(): int
+    {
+        return $this->score;
+    }
+
+    public function setScore(int $score): static
+    {
+        $this->score = $score;
+
+        return $this;
+    }
+
+    public function getLives(): int
+    {
+        return $this->lives;
+    }
+
+    public function setLives(int $lives): static
+    {
+        $this->lives = $lives;
+
+        return $this;
+    }
+
+    public function isAlive(): bool
+    {
+        return $this->isAlive;
+    }
+
+    public function setIsAlive(bool $isAlive): static
+    {
+        $this->isAlive = $isAlive;
+
+        return $this;
+    }
+}
